--- a/DjPedido/templates/base.html
+++ b/DjPedido/templates/base.html
@@ -1,4 +1,4 @@
-{%  load static %}
+{% load static %}
 <!DOCTYPE html>
 <html lang="pt-br" >
 <head>
@@ -32,14 +32,19 @@
             <!-- Header -->
             {% block header %} {% endblock %}
             <!-- END Header -->
+
             <div class="suit-columns two-columns">
                 <div id="suit-center" class="suit-column">
+
                     <ul class="breadcrumb">
                         <li><a href="/admin/">Início</a>
                             <span class="divider">&raquo;</span>
                         </li>
                         <!-- <li class="active">Djpedido</li> -->
-                        <li class="active">Gestão</li>
+                        <!-- <li class="active">Relatório</li> -->
+                        {% block sidebar %}
+                        {% endblock %}
+
                     </ul>
 
                     <!-- Content -->
@@ -47,6 +52,8 @@
                     <!-- END Content -->
 
                 </div>
+
+<!--
                 <div id="suit-left" class="suit-column">
                     <form class="form-search nav-quick-search" autocomplete="off" action="/admin/auth/user/" method="GET">
                         <input type="text" name="q" class="input-medium search-query" id="quick-search">
@@ -72,6 +79,124 @@
                         </ul>
                     </div>
                 </div>
+-->
+
+
+           <div id="suit-left" class="suit-column">
+
+
+
+                    <form class="form-search nav-quick-search" autocomplete="off" action="/admin/auth/user/" method="GET">
+                      <input type="text" name="q" class="input-medium search-query" id="quick-search">
+                      <i class="input-icon icon-search"></i>
+                      <input type="submit" class="submit" value="">
+                    </form>
+
+
+
+
+
+
+
+
+<div class="left-nav" id="left-nav">
+  <ul>
+
+
+      <li class="active">
+        <a href="/admin/"><i class="icon-home"></i>Início
+        </a>
+      </li>
+
+
+
+
+
+
+          <li class="separator"></li>
+
+
+
+          <li>
+            <a href="/admin/DjPedido/item/"><i class="icon-edit"></i>Cadastros
+            </a>
+
+              <ul>
+
+                  <li>
+                    <a href="/admin/DjPedido/item/">Itens</a></li>
+
+                  <li>
+                    <a href="/admin/DjPedido/colaborador/">Colaboradores</a></li>
+
+                  <li>
+                    <a href="/admin/DjPedido/supervisor/">Supervisores</a></li>
+
+                  <li>
+                    <a href="/admin/DjPedido/vendedor/">Vendedores</a></li>
+
+              </ul>
+
+          </li>
+
+
+
+          <li class="separator"></li>
+
+
+
+          <li>
+            <a href="/admin/DjPedido/pedidosolicitacao/"><i class="icon-share"></i>Pedido
+            </a>
+
+              <ul>
+
+                  <li>
+                    <a href="/admin/DjPedido/pedidosolicitacao/">Solicitação</a></li>
+
+                  <li>
+                    <a href="/admin/DjPedido/pedidodevolucao/">Devolução</a></li>
+
+              </ul>
+
+          </li>
+
+
+
+          <li class="separator"></li>
+
+
+
+          <li>
+            <a href="/pdlist"><i class="icon-th-list"></i>Relatório
+            </a>
+
+              <ul>
+
+                  <li>
+                    <a href="/pdlist" target=_blank>Lista devoluções de pedidos</a></li>
+
+                  <li>
+                    <a href="/problemas/" target=_blank>Listado de fichas de problemas</a></li>
+
+              </ul>
+
+          </li>
+
+
+
+  </ul>
+</div>
+
+
+            </div>
+
+
+
+
+
+
+
             </div>
         </div>
         <!-- Sticky footer push -->
