--- a/DjPedido/templates/base.html
+++ b/DjPedido/templates/base.html
@@ -168,16 +168,19 @@
 
 
           <li>
-            <a href="/pdlist"><i class="icon-th-list"></i>Relatório
+            <a href="/listPedidosSolicitacao"><i class="icon-th-list"></i>Relatórios
             </a>
 
               <ul>
 
                   <li>
-                    <a href="/pdlist" target=_blank>Lista devoluções de pedidos</a></li>
+                    <a href="/listPedidosSolicitacao">Lista pedidos em solicitação</a></li>
 
                   <li>
-                    <a href="/problemas/" target=_blank>Listado de fichas de problemas</a></li>
+                    <a href="/listPedidosDevolucao">Lista pedidos em devolução</a></li>
+
+                  <li>
+                    <a href="/listPedidosFechado">Lista pedidos já fechado</a></li>
 
               </ul>
 
